[project]
name = "gaps"
version = "0.1.0"
description = "Genetic Algorithm based solver for jigsaw puzzles"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=10.2.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.2",
    "opencv-python>=4.8.0.74",
    "click>=8.1.6",
]

[project.scripts]
gaps = "gaps.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
